// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPage .create passes options through to Markup 1`] = `
<DocumentFragment>
  TEST STRING
</DocumentFragment>
`;

exports[`ContentPage .create passes options through to Markup: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .create renders 1`] = `
<DocumentFragment>
  MY CONTENT
</DocumentFragment>
`;

exports[`ContentPage .provider doesn't find extraPath/forest/thePage 1`] = `
<DocumentFragment>
  <h1>
    Cannot find extraPath/forest/thePage
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .provider doesn't find extraPath/forest/thePage: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .provider doesn't find forest 1`] = `
<DocumentFragment>
  <h1>
    Cannot find forest
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .provider doesn't find forest/notThePage 1`] = `
<DocumentFragment>
  <h1>
    Cannot find forest/notThePage
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .provider doesn't find forest/notThePage: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .provider doesn't find forest: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .provider doesn't find notForest/thePage 1`] = `
<DocumentFragment>
  <h1>
    Cannot find notForest/thePage
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .provider doesn't find notForest/thePage: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .provider doesn't find thePage 1`] = `
<DocumentFragment>
  <h1>
    Cannot find thePage
  </h1>
</DocumentFragment>
`;

exports[`ContentPage .provider doesn't find thePage: NewTabLink props 1`] = `undefined`;

exports[`ContentPage .provider finds forest/thePage 1`] = `
<DocumentFragment>
  THE PAGE
</DocumentFragment>
`;

exports[`ContentPage .provider finds forest/thePage: NewTabLink props 1`] = `undefined`;

exports[`ContentPage ContentCreator links renders 1`] = `
{
  "children": "testLink text",
  "href": "testLink href",
  "onClick": [Function],
}
`;

exports[`ContentPage ContentCreator links renders, children is text 1`] = `
{
  "children": "OVERRIDE",
  "href": "testLink href",
  "onClick": [Function],
}
`;

exports[`ContentPage ContentCreator links renders, children is text: NewTabLink props 1`] = `
{
  "children": "OVERRIDE",
  "href": "testLink href",
  "onClick": [Function],
}
`;

exports[`ContentPage ContentCreator links renders, children is text: NewTabLink props 2`] = `
{
  "children": "OVERRIDE",
  "href": "testLink href",
  "onClick": [Function],
}
`;

exports[`ContentPage ContentCreator links renders: NewTabLink props 1`] = `
{
  "children": "testLink text",
  "href": "testLink href",
  "onClick": [Function],
}
`;
